Adjustments on POM to configure a docker image.